[build-system]
requires = ["setuptools < 60.0","numpy","scipy","h5py","pyscf"]
build-backend = "setuptools.build_meta"

[project]
name = "embedding_bkesk"
version = "0.0.1"
authors = [
  { name="Kyle Eskridge" },
]
description = "A package for building 2nd quantized embedding Hamiltonians"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/bkesk/embeddingAFQMC"
"Bug Tracker" = "https://github.com/bkesk/embeddingAFQMC/issues"

[project.scripts]
embed = "embedding.__main__:main"
